--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,13 @@ dependencies:
   cupertino_icons: ^1.0.0
   intl: ^0.16.1
   flutter_bloc: ^6.0.6
+  equatable: ^1.2.3
+
+  firebase_core: ^0.5.0
+  google_sign_in: ^4.5.1
+  firebase_auth: ^0.18.1+2
+  cloud_firestore: ^0.14.0
+  firebase_messaging: ^7.0.3
 
 dev_dependencies:
   flutter_test:
